<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_program"
             android:checked="true"
             android:icon="@drawable/nav_program"
            android:title="@string/nav_program" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_setting"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/nav_share"
            android:checkable="false"
            android:title="@string/nav_share_application" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_sign_out" />
        </group>
</menu>
